[package]
about = "CLI to test your code on local."
author = "Lee Unseo"
edition = "2021"
name = "atcli"
version = "0.1.0"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[dependencies.clap]
features = ["derive", "cargo"]
version = "3.1.9"
