[package]
about = "CLI to test your code on local."
author = "Lee Unseo"
edition = "2021"
name = "atcli"
version = "0.1.0"
[dependencies.serde]
features = ["derive"]
version = "*"

[dependencies.clap]
features = ["derive", "cargo"]
version = "3.1.9"

[dependencies.reqwest]
features = ["json"]
version = "0.11"

[dependencies.tokio]
features = ["full"]
version = "1"
